fix(side menu): background color of collapsed dropdown (#192)

--- a/core/src/components/side-menu/side-menu-dropdown/side-menu-dropdown.scss
+++ b/core/src/components/side-menu/side-menu-dropdown/side-menu-dropdown.scss
@@ -28,7 +28,7 @@
       position: absolute;
       left: var(--side-menu-width);
       box-shadow: var(--tds-nav-dropdown-menu-box);
-      background-color: var(--tds-grey-958);
+      background-color: var(--tds-sidebar-side-menu-subnav-background);
 
       .heading-collapsed {
         all: unset;
